Bug 1789482 - Let cairo-quartz-surface use DO_IMAGE for the EXTEND_PAD case as well as EXTEND_NONE, and re-enable the use of CGLayer-backed cairo-quartz surfaces for better pdf.js print quality. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D159623